Corrected spacing between list elements, tidied up related post array

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -168,7 +168,7 @@ li > ol,
 li > ul {
     margin-bottom: calc(1.45rem / 2);
     margin-left: 1.45rem;
-    margin-top: calc(1.45rem / 2);
+    margin-top: 0;
 }
 
 li li {
